<resources>
    <string name="app_name">CameraSecuritySystem</string>
    <string name="dashcam">Dashcam</string>
    <string name="ip_camera">IP Camera</string>
    <string name="motion_camera">Motion Camera</string>

    <!-- sharedPreferences -->
    <string name="pwdIVByte">pwdIVByte</string>
    <string name="encPwd">encPwd</string>
    <string name="port">port</string>
    <string name="ip_address">ip_address</string>
    <string name="camera_id">camera_id</string>
    <string name="mail_key">mail_key</string>
    <string name="mail_secret">mail_secret</string>
    <string name="fromEmail">fromEmail</string>
    <string name="toEmail">toEmail</string>
    <string name="mailKeyIVByte">mailKeyIVByte</string>
    <string name="secretIVByte">secretIVByte</string>

    <string name="camera_id_title">Camera ID</string>
    <string name="port_title">Port</string>
    <string name="ip_address_title">IP address</string>
    <string name="password_title">Password</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_camera">Camera</string>

    <string name="recording_fragment_length">Fragment recording length in seconds</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <!-- Aliases-->
    <string name="keyStoreAliasMail">MailAPI</string>
    <string name="keyStoreAliasServer">connectToServer</string>

    <string name="capture">Capture</string>
    <string name="camera">Camera</string>
    <string name="stop">stop</string>
    <string name="Idle">Idle</string>
    <color name="txWhite">#FFFFFFFF</color>

    <string name="temperature_degrees">0.00</string>
    <!--Celsius-->
    <string name="temperature_suffix">\u2103</string>

    <!-- Validation errors -->
    <string name="err_not_empty">%1$s cannot be empty!</string>
    <string name="err_invalid">%1$s is invalid!</string>
    <string name="err_must_be_number">%1$s must be a number!</string>
    <string name="err_at_least">%1$s must be %2$d at minimum!</string>
    <string name="err_at_most">%1$s must be %2$d as maximum!</string>
    <string name="err_too_short">%1$s is too short!</string>
    <string name="err_too_long">%1$s is too long!</string>

    <!-- Text for share Intent-->
    <string name="share_text">This video was shared with the CameraSecuritySystem app!</string>
    <string name="title_activity_gallery">Gallery</string>

    <!-- Email API related-->
    <string name="mailjet_explanation">To use the email option, create a Mailjet account on Mailjet.com and follow the steps. You can enter your API key, API secret and your e-mail address in the fields below.</string>
    <string name="mail_key_string">API Key</string>
    <string name="mail_secret_string">API Secret</string>
    <string name="mail_email_string">E-mail address</string>
    <string name="from_e_mail_address">Registered MailJet e-mail</string>
    <string name="to_e_mail_address">Send e-mails to…</string>

    <!-- Weather API-->
    <string name="weather_api_explanation">To use the weather API, get your API key at https://openweathermap.org/api</string>
    <string name="city">City</string>
    <string name="api_key">API Key</string>
    <string name="api_secret">API Secret</string>

    <!-- Settings related   -->
    <string name="mail_settings">Mail Settings</string>
    <string name="weather_settings">Weather settings</string>
    <string name="tap_to_edit_connection_settings">Connection settings</string>
    <string name="keyStoreAliasWeather">weatherApiKey</string>
    <string name="cityString">City name</string>
    <string name="weatherApiKey">weatherApiKey</string>
    <string name="weatherCity">weatherCity</string>
    <string name="weatherKeyIVByte">weatherKeyIVByte</string>

    <!-- Connection -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Connecting…</string>
    <string name="no_internet">No internet</string>
    <string name="coming_soon">%s coming soon...</string>
</resources>
